@@ -387,7 +387,7 @@ void keepdirtemp (char const *);
 void openfcopy (FILE *);
 void snapshotedit (FILE *);
 void xpandstring (struct hshentry const *);
-#if has_NFS || bad_unlink
+#if has_NFS || BAD_UNLINK
 int un_link (char const *);
 #else
 #	define un_link(s) unlink(s)
